<resources>
    <string name="app_name">CBOCS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="orderTaker">Order Taker</string>
    <string name="tableNumber">Table Number</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="newOrder">Add New Order</string>
    <string name="currentOrders">Current Orders</string>
    <string name="pastOrder">Past Orders</string>
    <string name="fancy_fixin">Fancy Fixin\'</string>
    <string name="country_dinner">Country Dinner</string>
    <string name="wholesome_fixings">Wholesome Fixin\'</string>
    <string name="breakfast">Breakfast</string>
    <string name="pancakes">Pancakes</string>
    <string name="sides">Sides</string>
    <string name="title_activity_new_order">ActivityNewOrder</string>
    <string name="menuChoice">Menu Choice</string>
</resources>
