<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_order_background"
    >

    <android.support.constraint.Guideline
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"  />

    <android.support.constraint.Guideline
        android:id="@+id/centerLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45"  />

    <android.support.constraint.Guideline
        android:id="@+id/centerRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"  />

    <android.support.constraint.Guideline
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tableNumber"
        android:id="@+id/tableNum"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/colorAccent2"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/left"
        app:layout_constraintEnd_toStartOf="@id/right"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/tableInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textSize="24sp"
        android:textAlignment="center"
        android:inputType="number"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/left"
        app:layout_constraintEnd_toStartOf="@id/right"
        app:layout_constraintTop_toBottomOf="@id/tableNum"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintEnd_toStartOf="@id/right"
        app:layout_constraintStart_toStartOf="@id/left"
        app:layout_constraintTop_toBottomOf="@id/tableInput"
        android:layout_marginBottom="10dp"
        android:background="#00FFFFFF"
        android:orientation="vertical"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newOrder"
            android:text="@string/newOrder"
            android:textColor="@color/colorAccent"
            android:background="@color/colorAccent2"
            android:textSize="24sp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/right"
            app:layout_constraintStart_toStartOf="@id/left"
            >

        </Button>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="469dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorClear"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newOrder">

        </android.support.v7.widget.RecyclerView>



    </LinearLayout>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:background="@color/colorAccent2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/centerLeft"
        app:layout_constraintStart_toStartOf="@id/left"
        android:layout_marginBottom="10dp"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        android:background="@color/colorAccent2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right"
        app:layout_constraintStart_toStartOf="@id/centerRight"
        android:layout_marginBottom="10dp"
        />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:tint="@color/colorAccent2"
        android:clickable="true"
        app:srcCompat="@android:drawable/stat_notify_sync"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"/>
</android.support.constraint.ConstraintLayout>